# modron

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  example.config.yml  noxfile.py  pyproject.toml  requirements-dev.txt  requirements-types.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
modron/: __main__.py  app.py  config.py  exceptions.py  fabricate.py  model.py  models.py  render.py  utils.py
modron/db/: __init__.py  characters.py  conn.py  games.py  models.py  players.py  schema.sql  systems.py
modron/menus/: feedback.py
modron/plugins/: character.py  feedback.py  game.py  game_management.py  public.py  system.py  system_management.py  test.py
requirements/: all.txt  nox.txt  prod.txt  runtime.txt  tools.txt  types.txt
scripts/: .gitignore  devenv.py  reset-schema.py
